Improve returned information on interval columns for columns DATA_TYPE, INTERVAL_TYPE and INTERVAL_PRECISION of view INFORMATION_SCHEMA.COLUMNS. Added system views: INFORMATION_SCHEMA.CHECK_CONSTRAINTS, INFORMATION_SCHEMA.TABLE_CONSTRAINTS and INFORMATION_SCHEMA.SEQUENCES.

--- a/sql/ChangeLog
+++ b/sql/ChangeLog
@@ -8,6 +8,9 @@
    information_schema.views
    information_schema.columns
    information_schema.character_sets
+   information_schema.check_constraints
+   information_schema.table_constraints
+   information_schema.sequences
 
   Most views have been extended (after the standard columns) with MonetDB
   specific information columns such as schema_id, table_id, column_id, etc.
