--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog file for devel
 # This file is updated with Maddlog
 
+* Mon Oct 30 2023 Sjoerd Mullender <sjoerd@acm.org>
+- The ranges of merge partitions are now pushed down into the low
+  level GDK operations, giving them a handle to sometimes execute more
+  efficiently.
+
 * Thu Jul 27 2023 Niels Nes <niels@cwi.nl>
 - Removed the PYTHON MAP external language option, as after a fork the
   synchronization primitives could be in any state, leading to deadlocks.
