Add information_schema.routines view. Also improved information_schema.columns a little.

--- a/sql/ChangeLog
+++ b/sql/ChangeLog
@@ -11,6 +11,7 @@
    information_schema.check_constraints
    information_schema.table_constraints
    information_schema.referential_constraints
+   information_schema.routines
    information_schema.sequences
 
   Most views have been extended (after the standard columns) with MonetDB
