--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,32 @@
+monetdb (11.47.13) unstable; urgency=low
+
+  * Rebuilt.
+  * GH#7300: Implement missing standard SQL DATE and TIMESTAMP functions
+  * GH#7324: string_distance('method',str1, str2) as a generic distance
+    function
+  * GH#7409: Numpy table returning UDFs with variadic arguments
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Fri, 03 Nov 2023 10:48:08 +0100
+
+monetdb (11.47.13) unstable; urgency=low
+
+  * sql: Added a missing interface function sys.timestamp_to_str with
+    a TIMESTAMP (as opposed to TIMESTAMP WITH TIME ZONE) argument.
+    The missing interface caused error messages being produced when the
+    function was called with a TIMESTAMP argument, although it did give
+    the correct result.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Thu, 2 Nov 2023 10:48:08 +0100
+
+monetdb (11.47.13) unstable; urgency=low
+
+  * gdk: A bug was fixed where the administration of which bats were in use was
+    interpreted incorrectly during startup, causing problems later.  One
+    symptom that has been observed was failure to startup with a message
+    that the catalog tables could not be loaded.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Tue, 31 Oct 2023 10:48:08 +0100
+
 monetdb (11.47.11) unstable; urgency=low
 
   * Rebuilt.
