--- a/tools/merovingian/client/monetdb.1
+++ b/tools/merovingian/client/monetdb.1
@@ -110,7 +110,7 @@ steps before releasing it to users, unless the
 .B \-p
 argument is supplied.  See also
 .BR "monetdb lock" .
-The name of the database must match the expression [A\-Za\-z0\-9\-_]+.
+The name of the database must match the expression [A\-Za\-z0\-9_\-]+.
 .RS
 .TP
 \fB\-m\fP \fIpattern\fP
