--- a/misc/packages/deb/changelog
+++ b/misc/packages/deb/changelog
@@ -1,3 +1,17 @@
+monetdb (11.47.17) unstable; urgency=low
+
+  * Rebuilt.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Thu, 16 Nov 2023 10:48:27 +0100
+
+monetdb (11.47.17) unstable; urgency=low
+
+  * gdk: Fixed a regression where after a while the write-ahead log files
+    weren't being rotated, meaning from some point onwards, the newest
+    file just kept on growing.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Thu, 16 Nov 2023 10:48:27 +0100
+
 monetdb (11.47.15) unstable; urgency=low
 
   * Rebuilt.
