--- a/gdk/ChangeLog
+++ b/gdk/ChangeLog
@@ -1,3 +1,8 @@
 # ChangeLog file for GDK
 # This file is updated with Maddlog
 
+* Wed Jan  3 2024 Sjoerd Mullender <sjoerd@acm.org>
+- Made some changes to the TIMEOUT macros.  Most importantly, they
+  now get a pointer to a QryCtx structure as argument instead of the
+  timeout value.
+
