--- a/clients/ChangeLog
+++ b/clients/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog file for clients
 # This file is updated with Maddlog
 
+* Wed Jan 24 2024 Sjoerd Mullender <sjoerd@acm.org>
+- The --table (-t) option of msqldump now accepts SQL-style % wildcard
+  characters to dump all tables that match the pattern.  E.g. -t
+  %test%.%test% dumps all tables with 'test' in both the schema and
+  table name.
+
 * Wed Jan 10 2024 Sjoerd Mullender <sjoerd@acm.org>
 - Implemented interrupt handling in mclient.  When using mclient
   interactively, an interrupt (usually control-C) stops whatever the
