--- a/clients/mapiclient/msqldump.1
+++ b/clients/mapiclient/msqldump.1
@@ -98,8 +98,17 @@ query.
 \fB\-\-functions\fP (\fB\-f\fP)
 Only dump functions definitions.
 .TP
-\fB\-\-table=\fP\fItable\fP (\fB\-t\fP \fItable\fP)
-Only dump the specified \fItable\fP.
+\fB\-\-table=[\fIschema\fP\fB.\fP]\fItable\fP (\fB\-t\fP [\fIschema\fP\fB.\fP]\fItable\fP)
+Only dump the specified table.
+If
+.I schema
+is not specified, the user's current schema is used.
+When either
+.I schema
+or
+.I table
+contains percent characters, all tables matching the (SQL) search
+pattern are dumped.
 .TP
 \fB\-\-quiet\fP (\fB\-q\fP)
 Don't print the welcome message.
