--- a/clients/ChangeLog
+++ b/clients/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog file for clients
 # This file is updated with Maddlog
 
+* Thu Jan 25 2024 Sjoerd Mullender <sjoerd@acm.org>
+- Msqldump now accepts --output and --outputdir options.  When the
+  --outputdir option is used, the dump is placed in the file dump.sql in
+  the specified directory and all tables are dumped to separate CSV files.
+  In this way it is feasible to edit the dump script by hand if needed,
+  even for a large database.
+
 * Wed Jan 24 2024 Sjoerd Mullender <sjoerd@acm.org>
 - The --table (-t) option of msqldump now accepts SQL-style % wildcard
   characters to dump all tables that match the pattern.  E.g. -t
