Remove CURL from the stream library (and hence mserver5), but keep in mclient. The server didn't use CURL but carried it along (with a ton of supporting libraries).  Support has now been moved directly into mclient (and streamcat, the test program).  Instead of a url stream, they now use a buffer stream, but in either case, the data was copied completely before getting processed.

--- a/common/stream/ChangeLog
+++ b/common/stream/ChangeLog
@@ -1,3 +1,7 @@
 # ChangeLog file for stream
 # This file is updated with Maddlog
 
+* Wed Feb 21 2024 Sjoerd Mullender <sjoerd@acm.org>
+- CURL support has been removed from the stream library.  If support is
+  needed, look at the source code in either streamcat.c or mclient.c.
+
