--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,35 @@
+monetdb (11.49.5) unstable; urgency=low
+
+  * Rebuilt.
+  * GH#7390: Some MonetDB Server crashes found
+  * GH#7465: Unexpected result when using `NULL` in `BETWEEN`
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Tue, 12 Mar 2024 10:20:32 +0100
+
+monetdb (11.49.5) unstable; urgency=low
+
+  * gdk: The internal hash function for floating point types has been changed.
+    It is now no longer based on the bit representation, but on the value,
+    meaning that +0 and -0 (yes, they both exist in floating point) now
+    hash to the same value.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Fri, 8 Mar 2024 10:20:32 +0100
+
+monetdb (11.49.5) unstable; urgency=low
+
+  * sql: performance improvement of 'startswith' and 'endswith' filter functions
+    for join operators
+
+ -- Lucas Pereira <lucas.pereira@monetdbsolutions.com>  Thu, 7 Mar 2024 10:20:32 +0100
+
+monetdb (11.49.5) unstable; urgency=low
+
+  * clients: Fixed an issue where mclient wouldn't exit if the server it had
+    connected to exited for whatever reason while the client was waiting
+    for a query result.
+
+ -- Sjoerd Mullender <sjoerd@acm.org>  Wed, 6 Mar 2024 10:20:32 +0100
+
 monetdb (11.49.3) unstable; urgency=low
 
   * Rebuilt.
