--- a/common/stream/ChangeLog
+++ b/common/stream/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog file for stream
 # This file is updated with Maddlog
 
+* Fri May  3 2024 Sjoerd Mullender <sjoerd@acm.org>
+- ICONV support has been removed from the stream library.  The server
+  itself only needs UTF-8 support.  The client (mclient) does have
+  iconv support.
+
 * Wed Feb 21 2024 Sjoerd Mullender <sjoerd@acm.org>
 - CURL support has been removed from the stream library.  If support is
   needed, look at the source code in either streamcat.c or mclient.c.
