--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog file for devel
 # This file is updated with Maddlog
 
+* Wed May  8 2024 Sjoerd Mullender <sjoerd@acm.org>
+- The names of some of the provided RPM files have been changed.
+  References to the old MonetDB5 name have been removed.  All packages
+  are now just MonetDB.
+
 * Wed May  8 2024 Niels Nes <niels@cwi.nl>
 - Add support for select exp, count(*) group by 1 order by 1; ie. using
   numeric references Added support for group by all and order by all. The
